# jpeg_decoder

./: README.md
core_jpeg-main/c_model/: bitmap.ppm  jpeg  makefile
jpeg_decoder/: jpeg_decoder.xpr
jpeg_decoder/jpeg_decoder.cache/sim/: ssm.db
jpeg_decoder/jpeg_decoder.ip_user_files/mem_init_files/: 0001.mem  0002.mem  0003.mem
jpeg_decoder/jpeg_decoder.srcs/sim_1/new/: sim_top.v  testcode.v
kai_core_jpeg/: README.md
kai_core_jpeg/c_model/: README.md  jpeg  jpeg_idct_ifast.h  main.cpp  makefile  tanshoku.ppm
kai_core_jpeg/simulation/: CMakeLists.txt  README.md  sim_main.cpp
kai_core_jpeg/src_v/: jpeg_idct_ifast_y.v
kai_jpeg_decoder/: kai_jpeg_decoder.xpr
pre_test_tools/dma_echo/: dma_echo.xpr  genbin.sh
pre_test_tools/dma_echo/dma_echo.cache/wt/: synthesis.wdf
pre_test_tools/dma_echo/dma_echo.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_5.xml
pre_test_tools/dma_echo/dma_echo.runs/design_1_axi_dma_0_1_synth_1/: .vivado.begin.rst  design_1_axi_dma_0_1.dcp  design_1_axi_dma_0_1.tcl  design_1_axi_dma_0_1.vds  design_1_axi_dma_0_1_utilization_synth.pb  design_1_axi_dma_0_1_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
pre_test_tools/dma_echo/dma_echo.runs/impl_1/: runme.sh  (+35 more)
pre_test_tools/fpga_work_with_linux/: design_1_wrapper.xsa  fpga.bif  fpga_work_with_linux.xpr  genbin.sh
pre_test_tools/verilog_test/: verilog_test.xpr  vivado.jou
verilog_test2/: verilog_test2.xpr
verilog_test2/verilog_test2.cache/wt/: java_command_handlers.wdf
(+689 files in other folders)
